Reverted to working version after changes to notify_block

--- a/Testing.html
+++ b/Testing.html
@@ -44,22 +44,9 @@
         stimulus: 'img/c1b1notify.png',
         key_answer: 74,   // j
         choices: [74, 75, 76],   //j, k, l
-        show_stim_with_feedback: false,
-        correct_text: "<p class = 'text'> Thanks for fixing our house! Here's 30 dollars. </p>",
-        incorrect_text: "<p class= 'text'> Thanks for fixing our house! Here's 10 dollars. </p>",
-
-        /*var rewardMoney = function(key_press){
-            if (key_press = 74){
-            money_total += 30;
-            }
-            else if (key_press = 75) {
-            money_total += 10;
-            }
-            else{
-            money_total += 5;
-            }
-         };
-        rewardMoney(); */
+        show_stim_with_feedback: true,
+        correct_text: 'Thanks for fixing our house! Here is 30 dollars.',
+        incorrect_text: 'Thanks for fixing our house! Here is 10 dollars.'
 
     };
 
